# agentpay

./: .editorconfig  .gitignore  .prettierignore  .prettierrc.json  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
.kiro/specs/agentpay-platform/: .config.kiro  TASK-1.4-SUMMARY.md  design.md  requirements.md  tasks.md
contracts/: .gas-snapshot  .pre-commit-config.yaml  README.md  foundry.toml
contracts/lib/: .gitkeep
contracts/script/: .gitkeep  Deploy.s.sol
contracts/src/: .gitkeep  EscrowVault.sol  IdentityRegistry.sol  Roles.sol  StakeVault.sol
contracts/src/interfaces/: IEscrowVault.sol  IIdentityRegistry.sol  IStakeVault.sol
contracts/test/: .gitkeep  EscrowVault.t.sol  IdentityRegistry.t.sol  StakeVault.t.sol
documents/: TASK-2-On-Chain_Contract_Test_Specification.md
sdk/python/: README.md  pyproject.toml
sdk/python/src/agentpay_sdk/: __init__.py  client.py  discovery.py  eip712.py  negotiation.py  obligation.py  pay.py  policy.py  register.py  types.py  version_check.py  x402.py
sdk/typescript/: package.json  tsconfig.json
sdk/typescript/src/: client.ts  discovery.ts  eip712.ts  index.ts  negotiation.ts  obligation.ts  (+6 more)
services/audit-logger/: package.json
services/discovery/: package.json
services/identity-registry/: package.json
services/negotiation/: package.json
services/policy-engine/: package.json  tsconfig.json
services/rails-ledger/: package.json
services/reputation/: package.json
services/settlement/: package.json
services/verification/: package.json
(+74 files in other folders)
