[project]
name = "agentpay-workspace"
version = "0.0.0"
description = "AgentPay platform Python workspace root (uv)."
requires-python = ">=3.11"
readme = "README.md"

[tool.uv.workspace]
members = [
  "packages/canonical-json-py",
  "sdk/python",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["packages", "sdk"]
addopts = "-ra"
